--- a/src/app/create-post/create-post.component.html
+++ b/src/app/create-post/create-post.component.html
@@ -1,6 +1,6 @@
 <div class="container bordewr shadow mt-5 w-50">
 <h2> Create Post</h2>
-    
+    <h1>Git Check</h1>
     <form [formGroup]="postForm" class="p-2" (ngSubmit)="save()">
     <div class="mb-3">
         <label for="id1" class="form-label">Title</label>
