--- a/src/app/create-product/create-product.component.html
+++ b/src/app/create-product/create-product.component.html
@@ -1,6 +1,7 @@
 <p>create-product works!</p>
 <div class="container w-50 mt-5 border shadow p-5">
-    <h3>Create Product</h3>
+    <h3>Create Product </h3>
+    <h3>git 002</h3>
     <form [formGroup]="productForm" (ngSubmit)="save()">
        <div class="mb-3">
          <label for="id1" class="form-label">Name</label>
